--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,6 @@
-/dist       
-/.env
-/.env.local
-/.env.test  
-/.env.production
-.DS_Store
-/node_modules
+.env
+.env.local
+.env.test  
+.env.production
+node_modules/
+
