--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,6 @@
   "author": "Moni Chaurasiya",
   "type": "commonjs",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -14,6 +13,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,6 +22,4 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-
-
 }
