--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,8 @@
 MONGODB_URI=""
 PORT=5000
+
+JWT_SECRET=my_super_secret_key_for_devdirectory
+
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
