fix: fixed minor error and done with testing using postman

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,3 +6,5 @@ JWT_SECRET=my_super_secret_key_for_devdirectory
 CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
+
+FRONTEND_URL=https://developer-directory-kappa.vercel.app/
