--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -7,4 +7,4 @@ CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 
-FRONTEND_URL=https://developer-directory-kappa.vercel.app/
+FRONTEND_URL=https://developer-directory-kappa.vercel.app
